test/instance-checks-1.ktn
def example @a (-> a): 10
